# khanhtimn

./: .env  .gitignore  Cargo.toml  Dockerfile  README_LEPTOS.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build.yml  cd.yml  ci.yml
certs/: localhost-key.pem  localhost.pem
crates/bevy/: Cargo.toml
crates/bevy/src/: lib.rs
crates/bevy/src/demo/: animation.rs  input.rs  level.rs  mod.rs  movement.rs  player.rs
crates/game_client/: Cargo.toml
crates/game_client/src/: audio.rs  connection.rs  input.rs  lib.rs  menu.rs  screens.rs  singleplayer.rs
crates/game_client/src/demo/: animation.rs  assets.rs  level.rs  mod.rs
crates/game_client/src/theme/: interaction.rs  mod.rs  palette.rs  widget.rs
crates/game_common/: Cargo.toml
crates/game_common/src/: components.rs  events.rs  input.rs  lib.rs  physics.rs  protocol.rs  simulation.rs  spawning.rs
crates/game_server/: Cargo.toml
crates/game_server/src/: connection.rs  main.rs  physics.rs  spawning.rs
crates/leptos/: Cargo.toml
crates/leptos/src/: app.rs  main.rs
scripts/: generate_certs.ps1  generate_certs.sh
src/: app.rs  main.rs
style/: tailwind.css
