[workspace]
resolver = "3"
members = [
    "crates/leptos",
    "crates/game_common",
    "crates/game_client",
    "crates/game_server",
]

[workspace.dependencies]
game_common = { path = "crates/game_common" }
game_client = { path = "crates/game_client" }

# Bevy ecosystem
bevy = { version = "0.18", default-features = false }
bevy_color = { version = "0.18", features = ["serialize"] }
bevy_enhanced_input = "0.23"
bevy_replicon = { version = "0.38", default-features = false }
bevy_replicon_renet2 = { version = "0.13", default-features = false }
bevy_renet2 = { version = "0.13", default-features = false }

# Utilities
rand = "0.9"
url = "2.5"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"
getrandom_0_2 = { version = "0.2", package = "getrandom" }
getrandom_0_3 = { version = "0.3", package = "getrandom" }
uuid = { version = "1.19", features = ["rng-getrandom"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls-pki-types = "1.14.0"

# Leptos
leptos = { version = "0.8", features = ["nightly"] }
leptos_router = { version = "0.8", features = ["nightly"] }
leptos_meta = "0.8"
leptos_axum = "0.8"
leptos-use = "0.18.0"
leptos-bevy-canvas = { git = "https://github.com/Synphonyte/leptos-bevy-canvas", branch = "dependabot/cargo/bevy-0.18", features = ["bevy_state"] }
axum = "0.8"
console_error_panic_hook = "0.1"

# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0

[[workspace.metadata.leptos]]
name = "khanhtimn_dev"

# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "khanhtimn_dev"

# The package in the workspace that contains the server binary (must have `package.name`)
bin-package = "khanhtimn_dev"

# The package in the workspace that contains the frontend lib (must have `package.name`)
lib-package = "khanhtimn_dev"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
# style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.

# The tailwind input file.
#
# Optional, Activates the tailwind build
tailwind-input-file = "style/tailwind.css"

# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
