[package]
name = "khanhtimn_dev_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["2d"] }
bevy_enhanced_input = { version = "0.22" }

getrandom = { version = "0.3.4", features = ["wasm_js"] }
rand_core = "0.9.5"
uuid = { version = "1.19.0", features = ["rng-getrandom"] }
