[package]
name = "game_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
game_common = { path = "../game_common", features = ["client"] }

bevy = { version = "0.18", default-features = false, features = ["2d"] }
bevy_replicon_renet2 = { version = "0.13", default-features = false, features = [
	"client",
	"wt_client_transport",
] }
bevy_renet2 = { version = "0.13", default-features = false, features = [
	"wt_client_transport",
] }

getrandom-0-2 = { version = "0.2", package = "getrandom", features = ["js"] }
getrandom-0-3 = { version = "0.3", package = "getrandom", features = [
	"wasm_js",
] }
rand = "0.9"
uuid = { version = "1.19", features = ["rng-getrandom"] }
tracing = { version = "0.1", features = [
	"max_level_debug",
	"release_max_level_warn",
] }
url = "2.5"
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"


[features]
default = []
dev = ["bevy/bevy_dev_tools", "bevy/bevy_ui_debug", "bevy/track_location"]
