[package]
name = "game_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
game_common = { workspace = true, features = ["client"] }

bevy = { workspace = true, features = ["2d"] }
bevy_replicon_renet2 = { workspace = true, features = [
	"client",
	"wt_client_transport",
] }
bevy_renet2 = { workspace = true, features = ["wt_client_transport"] }

rand = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true, features = [
	"max_level_debug",
	"release_max_level_debug",
] }
url = { workspace = true }

# WASM-only dependencies
[target.'cfg(target_family = "wasm")'.dependencies]
getrandom_0_2 = { workspace = true, features = ["js"] }
getrandom_0_3 = { workspace = true, features = ["wasm_js"] }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

[features]
default = []
dev = ["bevy/bevy_dev_tools", "bevy/bevy_ui_debug", "bevy/track_location"]
