[package]
name = "game_common"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false }
bevy_color = { version = "0.18", features = ["serialize"] }
bevy_enhanced_input = { version = "0.22" }
bevy_replicon = { version = "0.38", default-features = false }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
client = ["bevy_replicon/client"]
server = ["bevy_replicon/server"]
