[package]
name = "game_common"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_color = { workspace = true }
bevy_enhanced_input = { workspace = true }
bevy_replicon = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

[features]
default = []
client = ["bevy_replicon/client"]
server = ["bevy_replicon/server"]
