[package]
name = "game_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "game_server"
path = "src/main.rs"

[dependencies]
game_common = { workspace = true, features = ["server"] }

bevy = { workspace = true, features = ["bevy_log", "bevy_state", "multi_threaded"] }
bevy_replicon_renet2 = { workspace = true, features = ["server", "wt_server_transport"] }
bevy_renet2 = { workspace = true, features = ["wt_server_transport"] }

clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
rustls-pki-types = { workspace = true }
