[package]
name = "khanhtimn_dev"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
game_client = { workspace = true, optional = true }

leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos-use = { workspace = true }
leptos-bevy-canvas = { workspace = true, optional = true }

axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
hydrate = [
	"leptos/hydrate",
	"dep:console_error_panic_hook",
	"dep:wasm-bindgen",
	"dep:game_client",
	"dep:leptos-bevy-canvas",
]
ssr = [
	"dep:axum",
	"dep:tokio",
	"dep:leptos_axum",
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
]
